--- a/backend/package.json
+++ b/backend/package.json
@@ -13,5 +13,8 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.15.1"
+  },
+  "engines": {
+    "node": "20.x"
   }
 }
